# lol-champions_scraping

./: .gitignore  README.md  champions_lane_and_date_release.csv  get_champion_data.py  get_champions_data.py  get_champions_lane_and_date_release.py  get_champions_name.py  get_cotd_data.py  languages.csv  pyproject.toml  sb.ipynb  utils.py
champions_data/: champions_data_en_GB.csv  champions_data_fr_FR.csv  champions_data_ja_JP.csv  champions_data_ko_KR.csv
champions_name/: champions_name_cs_CZ.csv  champions_name_de_DE.csv  champions_name_el_GR.csv  champions_name_en_GB.csv  champions_name_es_AR.csv  champions_name_es_ES.csv  champions_name_fr_FR.csv  champions_name_hu_HU.csv  champions_name_it_IT.csv  champions_name_ja_JP.csv  champions_name_ko_KR.csv  champions_name_pl_PL.csv  champions_name_pt_BR.csv  champions_name_ru_RU.csv  champions_name_tr_TR.csv
cotd/2024/: ar_AE.csv  cs_CZ.csv  de_DE.csv  el_GR.csv  en_US.csv  es_AR.csv  es_ES.csv  es_MX.csv  fr_FR.csv  hu_HU.csv  it_IT.csv  ja_JP.csv  ko_KR.csv  pl_PL.csv  pt_BR.csv  ro_RO.csv  ru_RU.csv  th_TH.csv  tr_TR.csv  vi_VN.csv  zh_CN.csv  zh_MY.csv  zh_TW.csv
cotd/2025/: ar_AE.csv  cs_CZ.csv  de_DE.csv  el_GR.csv  en_PH.csv  es_AR.csv  es_ES.csv  es_MX.csv  fr_FR.csv  hu_HU.csv  it_IT.csv  ja_JP.csv  ko_KR.csv  pl_PL.csv  pt_BR.csv  ro_RO.csv  ru_RU.csv  th_TH.csv  tr_TR.csv  vi_VN.csv  zh_CN.csv  zh_MY.csv  zh_TW.csv
cotd/2026/: ar_AE.csv  cs_CZ.csv  de_DE.csv  el_GR.csv  en_PH.csv  es_AR.csv  es_ES.csv  es_MX.csv  fr_FR.csv  hu_HU.csv  it_IT.csv  (+12 more)
data/: lane.csv  language.csv  region.csv  release_date.csv
(+270 files in other folders)
